# mcp-gateway-registry

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  TESTING_COMBINED_PRS.md  build-config.yaml  customizations.md  docker-compose.neo.yml  docker-compose.podman.yml  docker-compose.prebuilt.yml  docker-compose.yml  import_server_list.txt  package-lock.json  package.json  pyproject.toml
.github/: pull_request_template.md
api/: registry_client.py  registry_management.py
auth_server/: oauth2_providers.yml  scopes.yml  scopes.yml.tobedeleted  server.py
charts/: README.md
cli/: agent_mgmt.py  anthropic_transformer.py  import_from_anthropic_registry.sh  mcp_security_scanner.py  package-lock.json  scan_all_servers.py  service_mgmt.sh
docker/: Dockerfile.mcp-server  Dockerfile.registry  nginx_rev_proxy_http_and_https.conf  nginx_rev_proxy_http_only.conf
docs/: agentcore.md  architectural-comparison-reverse-proxy-vs-tools-gateway.md  auth.md  complete-setup-guide.md  configuration.md  cookie-security-design.md  ink-cli-comprehensive-guide.md  llms.txt  security-scanner.md  sub-tasks-issue-195-example-agents.md
frontend/: package-lock.json  package.json
metrics-service/: pyproject.toml
registry/: main.py  version.py
scripts/: README-register-demo-servers.md  build-images.sh  debug-scopes.py  deploy-registry.sh  init-documentdb-indexes.py  load-scopes.py  manage-documentdb.py  register-demo-servers.sh  test.py
servers/mcpgw/: pyproject.toml  server.py
terraform/: README.md
tests/: TEST_QUICK_REFERENCE.md  agent_crud_test.sh  conftest.py  (+1 more)
(+124 files in other folders)
