[project]
name = "mcpgw-mcp-server"
version = "0.1.0"
description = "MCP server to interact with the MCP Gateway Registry API"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "faiss-cpu>=1.9.0",
    "fastmcp>=3.2.0",
    "numpy>=2.0.0",
    "pydantic>=2.11.3",
    "PyYAML>=6.0.1",
    "scikit-learn>=1.5.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
# Local-only project - never resolve from PyPI
package = false
